[project]
name = "energiepreis-vattenfall-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "matplotlib>=3.9.2",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]

[project.scripts]
start = "main"
